Finalized titelpage of the Portfolio. Correct some spelling errors in Aufgab2-4

--- a/1.Semester/Systemplanung/Aufgabe3.tex
+++ b/1.Semester/Systemplanung/Aufgabe3.tex
@@ -60,7 +60,7 @@ Kreditkarte werden die Kosten abgebucht. Drückt der/die Benutzer:in den Startkn
 einzugeben. Deren Gültigkeit wird überprüft und die Benutzer:innen werden aufgefordert, die persönliche
 Geheimnummer einzugeben. Wenn die Transaktion überprüft ist, wird der Fahrschein ausgegeben."}
 \end{quote}
-Wie wird der Zielort ausgewählt? Soll sich eine Karte öffnen und man klickt auf die Stadt oder durchsucht man eine Liste der möglichen Ziele? Soll das Zahlungssystem nur mit der Kreditkarte funktionieren? Benötigt man Pin nicht nur bei der Debitkart? Wie wird der Fahrschein Ausgegeben? Wird ein QR-Code erstellt und man kann diesen Scannen? Wird der Fahrschein ausgedruckt? Kann man dich den Fahrschein auch per Mail senden lassen? Welche Destinationen werden angezeigt, nur diese welche auch vom Standort aus erreichbar sind oder alle möglichen? Kann nur ein Ticket gekauft werden oder auch mehrere? Was passiert wenn man die Destination ändern möchte? Gibt es eine Möglichkeit einen schritt zurück zu gehen oder muss man den Prozess neu beginnen? Was passiert wenn die Karte gleich zu beginn eingesteckt wird? Was passiert wenn der Pin nicht korrekt eingegeben wird oder die Karte nicht erkannt wird?
+Wie wird der Zielort ausgewählt? Soll sich eine Karte öffnen und man klickt auf die Stadt oder durchsucht man eine Liste der möglichen Ziele? Soll das Zahlungssystem nur mit der Kreditkarte funktionieren? Benötigt man Pin nicht nur bei der Debitkart? Wie wird der Fahrschein Ausgegeben? Wird ein QR-Code erstellt und man kann diesen Scannen? Wird der Fahrschein ausgedruckt? Kann man sich den Fahrschein auch per Mail senden lassen? Welche Destinationen werden angezeigt, nur diese welche auch vom Standort aus erreichbar sind oder alle möglichen? Kann nur ein Ticket gekauft werden oder auch mehrere? Was passiert wenn man die Destination ändern möchte? Gibt es eine Möglichkeit einen schritt zurück zu gehen oder muss man den Prozess neu beginnen? Was passiert wenn die Karte gleich zu beginn eingesteckt wird? Was passiert wenn der Pin nicht korrekt eingegeben wird oder die Karte nicht erkannt wird?
 
 \section{Stellen Sie eine Reihe nichtfunktionaler Anforderungen für das Fahrscheinausgabe- system auf und legen
 Sie seine erwartete Zuverlässigkeit und Antwortzeit fest.}
@@ -70,7 +70,7 @@ Sie seine erwartete Zuverlässigkeit und Antwortzeit fest.}
 \begin{itemize}
   \item Der Automat muss robust und stabil gegen äußerliche Einwirkungen sein
   \item Die Anbindung an den Kreditkarten dienst muss sicher sein und die Daten der Karte dürfen nicht gespeichert werden.
-  \item Anbindung an die Datenbank oder API des Bahnhofbetribers muss sicher und Verschlüsselt sein.
+  \item Anbindung an die Datenbank oder API des Bahnhofbetreibers muss sicher und Verschlüsselt sein.
   \item Sprachausgabe für sehbehinderte Menschen.
   \item Am Display sollte es die Möglichkeit geben einen Qr-Code anzeigen zu lassen, mit welchem man das Ticket scannen und downloaden kann.
   \item Alternative Bezahlweisen Andenken (ApplePay,Bargeld,...)
@@ -94,8 +94,8 @@ Für die folgenden Anforderungen wird das System des VOLERE Requirements Enginee
  \item Rationale: Erklärung, warum diese Anforderung wichtig ist.
  \item Source: Wer hat diese Anforderung gestellt.
  \item Fit Criterion: Abschätzung/Lösungsansatz wie man es Testen kann ob die Lösung die Anforderung erfüllt.
- \item Customer Satisfaction: Wie zufrieden wäre die Person, welche diese Anforderung gestellt hat, wenn er dieses Feature bekommt: Skala von 1 (Nicht) - 5 (Sehr).
- \item Customer Disssatisfaction: Wie unzufrieden wäre die Person, welche diese Anforderung gestellt hat, wenn er dieses Feature nicht bekommt: Skala von 1 (Nicht) - 5 (Sehr).
+ \item Customer Satisfaction: Wie zufrieden wäre die Person, welche diese Anforderung gestellt hat, wenn dieses Feature kommt: Skala von 1 (Nicht) - 5 (Sehr).
+ \item Customer Disssatisfaction: Wie unzufrieden wäre die Person, welche diese Anforderung gestellt hat, wenn dieses Feature nicht kommt: Skala von 1 (Nicht) - 5 (Sehr).
  \item Dependencies: Liste andere Anforderungen, von welcher diese Anforderung abhängt.
  \item Conflicts: Anzahl von Anforderungen, welche mit dieser Anforderung im Konflikt stehen.
  \item Materials: Link zu weiteren Dokumenten oder Anhängen.
