--- a/1.Semester/Systemplanung/Aufgabe4.tex
+++ b/1.Semester/Systemplanung/Aufgabe4.tex
@@ -31,7 +31,7 @@
 
 \begin{document}
  \section{Erklären Sie, warum Sie beim Entwurf der Architektur eines großen Systems in der Regel mehrere Architekturmuster benutzten. Welche zusätzlichen Informationen über Muster – abgesehen von denen, die im Kurs diskutiert wurden – könnten beim Entwurf von großen System hilfreich sein?}
-Unterschiedliche nicht-funktionale Anforderungen können zueinander in Konflikt stehen. Weshalb ein Kompromiss gefunden werden muss. Deswegen ist man teilweise dazu gezwungen für verschiedenen teile einer Anwendung auch verschiedene Architekturmuster zu verwenden. Ein Beispiel wäre, wenn eine Airline seinen Passagieren eine Erinnerung aussenden möchte. Einerseits wird hier für die Filterung der entsprechenden Flüge (zB innerhalb einer gewissen Zeit, zugehörig zu einem Passagie, usw..) ein Pipe und Filter Pattern verwendet. Zur Übertragung der Nachricht an den Passagier wird ein Server-Client-Pattern verwendet. Möchte man zusätzlich zu diese Anwendungen noch ein Webapp zu Verfügung stellen, kommt bei der Umsetzung dieser das "MVC-Pattern" in Einsatz. Schreibt man die Anwenden in JAVA, dann verwendet man implizite das "Layerd-Pattern", da der Ausgelieferte Binärcode von der "Java Runtime Environment" direkt für das Betriebssystem übersetzt. Für die Skalierbarkeit von großen Systemen könnte es sinnvoll sein sich Architekturmuster für Container-Technologien anzuschauen. Mit Container-Technologien wie Docker kann man Microservices erstellen, welche zum Besipiel Webapps hosten.
+Unterschiedliche nicht-funktionale Anforderungen können zueinander in Konflikt stehen. Weshalb ein Kompromiss gefunden werden muss. Deswegen ist man teilweise dazu gezwungen für verschiedenen teile einer Anwendung auch verschiedene Architekturmuster zu verwenden. Ein Beispiel wäre, wenn eine Airline seinen Passagieren eine Erinnerung aussenden möchte. Einerseits wird hier für die Filterung der entsprechenden Flüge (zB innerhalb einer gewissen Zeit, zugehörig zu einem Passagie, usw..) ein Pipe und Filter Pattern verwendet. Zur Übertragung der Nachricht an den Passagier wird ein Server-Client-Pattern verwendet. Möchte man zusätzlich zu diese Anwendungen noch ein Webapp zu Verfügung stellen, kommt bei der Umsetzung dieser das "MVC-Pattern" in Einsatz. Schreibt man die Anwenden in JAVA, dann verwendet man implizite das "Layerd-Pattern", da der Ausgelieferte Binärcode von der "Java Runtime Environment" direkt für das Betriebssystem übersetzt wird. Für die Skalierbarkeit von großen Systemen könnte es sinnvoll sein sich Architekturmuster für Container-Technologien anzuschauen. Mit Container-Technologien wie Docker kann man Microservices erstellen, welche zum Besipiel Webapps hosten.
 \section{Schlagen Sie die Komponenten vor, die Teil eines Informationssystems sein können, welches den Benutzer:innen die Anzeige der Abflug- und Ankunftszeiten eines bestimmten Flughafens ermöglicht.}
 \begin{itemize}
  \item Datenbank die Daten über die Zeiten der Flüge beinhaltet.
@@ -51,12 +51,12 @@ diese Architektur}
 \caption{Architektur Musikstreamingdienst}
 \end{center}
 \end{figure}
-Bei dieser Architektur kommen das MVC-Pattern und Client-Server-Patern ins spiel. Die Endgeräte greifen entweder über einen Desktopclient oder einen Webbrowser auf einen Load- balancer zu, welche die Verbindungen nach Last auf einen der Server weiterleitet. Auf den einzelnen Servern laufen mehrere Container. Ein Container besteht aus einem Webserver für anfragen über den Browser oder einer Server-Application für anfragen über einen Desktopclient. Für ein Anfrage über einen Webbrowser läuft ebenfalls eine Frontend auf jeden Container. Dies kann mit *.jsp Files, Angular,React, usw... umgesetzt werden. Ein einzelner Container läuft so- lange, solange ein User Musik abspielt. Sobald die Verbindungen abgebrochen wird, wird der Container wieder beendet. Da jeder Container gleich ist, kann man dieses System beliebig oft erweitern. Die Servlets bilden die Controler des MVC-Patterns. Das Modell besteht aus Klassen, welche die Struktur der Datenbank abbilden. Der Controler liest die Daten aus und gibt diese an die View (HTML-Komponente) weiter. Eingaben vom User (Änderungen Playlist,usw) werden von der View an den Controller weitergegeben, welcher das Modell abändert und in der Daten- bank hinterlegt.
+Bei dieser Architektur kommen das MVC-Pattern und Client-Server-Patern ins spiel. Die Endgeräte greifen entweder über einen Desktopclient oder einen Webbrowser auf einen Loadbalancer zu, welche die Verbindungen nach Last auf einen der Server weiterleitet. Auf den einzelnen Servern laufen mehrere Container. Ein Container besteht aus einem Webserver für anfragen über den Browser oder einer Server-Application für Anfragen über einen Desktopclient. Für ein Anfrage über einen Webbrowser läuft ebenfalls eine Frontend auf jeden Container. Dies kann mit *.jsp Files, Angular,React, usw... umgesetzt werden. Ein einzelner Container läuft solange, solange ein User Musik abspielt. Sobald die Verbindungen abgebrochen wird, wird der Container wieder beendet. Da jeder Container gleich ist, kann man dieses System beliebig oft erweitern. Die Servlets bilden die Controler des MVC-Patterns. Das Modell besteht aus Klassen, welche die Struktur der Datenbank abbilden. Der Controler liest die Daten aus und gibt diese an die View (HTML-Komponente) weiter. Eingaben vom User (Änderungen Playlist,usw) werden von der View an den Controller weitergegeben, welcher das Modell abändert und in der Daten- bank hinterlegt.
 Für das Client-Server-Pattern wird der Desktopclient als "Client" und die Server-Application als "Server" verwendet, welche über Websockets kommunizieren.
 \section{Erläutern Sie, warum Konflikte auftauchen können, wenn eine Architektur entworfen wird, für die sowohl
 Verfügbarkeits- als auch Informationssicherheits- anforderungen die wichtigsten nichtfunktionalen Anforde-
 rungen darstellen?}
-Die Verfügbarkeitssicheheit beschreibt, dass ein System immer bzw. in einer Vorgegebenen Zeit zur Verfügung steht. Dass dies bewerkstelligt werden kann, muss man gewisse Sachen redundant ausführen. Zum Beispiel führt man einen Reverseproxy und einen Load- balancer redundant aus, damit die Verbindung zum Backend immer bestehen bleibt, selbst wenn ein Proxy oder ein Loadbalancer ausfällt. Im idealen Fall befinden sich diese Softwareteile auf unterschiedlichen physischen Maschinen und Rechenzentren. Dann kann auch im Falle eines Stromausfalls der jeweils andere Server die Verbindungen halten. Die Informationssicherheit beschäftigt sich primär mit drei Themen:
+Die Verfügbarkeitssicheheit beschreibt, dass ein System immer bzw. in einer Vorgegebenen Zeit zur Verfügung steht. Dass dies bewerkstelligt werden kann, muss man gewisse Sachen redundant ausführen. Zum Beispiel führt man einen Reverseproxy und einen Loadbalancer redundant aus, damit die Verbindung zum Backend immer bestehen bleibt, selbst wenn ein Proxy oder ein Load- balancer ausfällt. Im idealen Fall befinden sich diese Softwareteile auf unterschiedlichen physischen Maschinen und Rechenzentren. Dann kann auch im Falle eines Stromausfalls der jeweils andere Server die Verbindungen halten. Die Informationssicherheit beschäftigt sich primär mit drei Themen:
 \begin{itemize}
  \item Vertraulichkeit: Dass nur berechtigte Personen gewisse Daten einsehen dürfen.
  \item Integrität: Eine unerkannte Datenänderung darf nicht möglich sein.
