--- a/1.Semester/eCollaboration/Potrfolio.tex
+++ b/1.Semester/eCollaboration/Potrfolio.tex
@@ -56,7 +56,7 @@
 \definecolor{mygray}{rgb}{0.5,0.5,0.5}
 \definecolor{mymauve}{rgb}{0.58,0,0.82}
 \definecolor{titlepagecolor}{cmyk}{1,.60,0,.40}
-\definecolor{namecolor}{cmyk}{1,.50,0,.10}
+\definecolor{namecolor}{HTML}{f39900}
 
 \begin{document}
 
@@ -64,18 +64,18 @@
 \newgeometry{left=7.5cm} %defines the geometry for the titlepage
 \pagecolor{titlepagecolor}
 \noindent
-\includegraphics[width=2cm]{example-image-a}\\[-1em]
+\includegraphics[width=4cm]{mci.png}\\[-1em]
 \color{white}
 \makebox[0pt][l]{\rule{1.3\textwidth}{1pt}}
 \par
 \noindent
-\textbf{\textsf{UniversitätsKlinikum}} \textcolor{namecolor}{\textsf{Heidelberg}}
+\textbf{\textsf{Management Center}} \textcolor{namecolor}{\textsf{Innsbruck}}
 \vfill
 \noindent
-{\huge \textsf{Handbuch 1.3}}
+{\huge \textsf{Portfolio eCollaboration}}
 \vskip\baselineskip
 \noindent
-\textsf{August 2008}
+\textsf{Lukas Gritsch}
 \end{titlepage}
 \restoregeometry
 \nopagecolor
