--- a/1.Semester/Systemplanung/Aufgabe2.tex
+++ b/1.Semester/Systemplanung/Aufgabe2.tex
@@ -27,7 +27,7 @@ ziehungen zwischen den Ergebnissen dieser Aktivitäten auf.}
  \item Design und Implementierung\\
  In dieser Phase fließen die Punkte, welche im Pflichtenheft festgelegt wurden in die Erstellung der Architektur des Systems ein. Für die Darstellung der Architektur verwendet man meist Modellierungssprachen wie UML. Danach werden diese Strukturen implementiert. Zum Abschluss dieser Phase werden UNIT Tests geschrieben, welche für automatisierte Tests verwendet werden.
  \item Validierung\\
- Das Programm welches unter der vorherigen Phase entstanden ist, wird nun mit Spezifikation abgeglichen. Des Weiteren werden in dieser Phase noch System- und Entwicklungstest durchgeführt. Am Ende dieser Phase findet eine Abnahme des Kunden statt. Vor der Abnahme werden auch noch Tests von Seiten des Kunden ausgeführt.
+ Das Programm welches unter der vorherigen Phase entstanden ist, wird nun mit der Spezifikation abgeglichen. Des Weiteren werden in dieser Phase noch System- und Entwicklungstests durchgeführt. Am Ende dieser Phase findet eine Abnahme des Kunden statt. Vor der Abnahme werden auch noch Tests von Seiten des Kunden ausgeführt.
  \item Evolution\\
  Nach heutigem Stand bekommt eine Software schneller Updates und es findet somit eine kontinuierlich weiterentwickelt statt. Durch diese Wartung führt man die Evolution des Produktes automatisch mit. Dadurch kann man sagen, dass diese Phase immer irrelevanter wird, da sie im Zuge des Supports integriert wird.
 \end{itemize}
@@ -41,7 +41,7 @@ Um solche Änderungen schneller zu erkennen, kann man das Projekt mit einem agil
 wicklung der folgenden Systeme dienen kann. Begründen Sie ihre Entscheidung auf der Basis des Sys-
 temtyps, der entwickelt wird:}
 \subsection{Ein System, das bei einem Auto das Antiblockiersystem steuert}
-Da es sich hier um ein kritisches System handelt, von welchem Menschenleben abhängen können würde wir hier zu einer Plan-getriebenen Vorgehensweise tendieren.
+Da es sich hier um ein kritisches System handelt, von welchem Menschenleben abhängen können, würde wir hier zu einer Plan-getriebenen Vorgehensweise tendieren.
 Es gibt auch wenig Sinn nur einen Teil der Software auszuliefern, da diese nur komplett Funktionsfähig ist. Der Kunde muss hier auch nicht wirklich mit einbezogen werden dies kann sehr gut ohne den Kunden getestet werden und hängt nicht vom Geschmack usw. ab.
 \subsection{Ein Virtual-Reality-System zur Unterstützung der Maschinenwartung}
 Hier würde wir es davon anhängig machen, welche Maschinen gewartet werden müssen. Sollte es ein MRT-Gerät sein, dann würde wir zu einer Plan-getriebenen Vorgehensweise tendieren.
@@ -67,8 +67,8 @@ Teamzusammensetzung und der Umgang mit personellen Änderungen im Projektteam}
 \begin{itemize}
  \item Aufteilung der Mitarbeiter auf Projekte
  \begin{itemize}
-  \item [Scrum:] Bei Projekt-teile auf Teams aufgeteilt, deswegen liegt die Wissensverteilung bei mehreren Entwickler:innen. Diese Teams sollten klein gehalten werden, um einen schnellen Informationsaustausch zu garantieren.
-  \item[Plan:] Jeder/Jede Entwickler/Entwickler bekommt genaue Aufgaben. Welche er/sie im laufe des Projektes zu erledigen hat.
+  \item [Scrum:] Projekt-teile werden auf Teams aufgeteilt, deswegen liegt die Wissensverteilung bei mehreren Entwickler:innen. Diese Teams sollten klein gehalten werden, um einen schnellen Informationsaustausch zu garantieren.
+  \item[Plan:] Jeder/Jede Entwickler/Entwicklerin bekommt genaue Aufgaben. Welche er/sie im laufe des Projektes zu erledigen hat.
  \end{itemize}
  \item Schätzung der Projektkosten
  \begin{itemize}
@@ -78,7 +78,6 @@ Teamzusammensetzung und der Umgang mit personellen Änderungen im Projektteam}
  \item Erhalt der Teamzusammensetzung und der Umgang mit personellen Änderungen im Projektteam
  \begin{itemize}
   \item [Scrum:] Dadurch, dass die Projekt-teile auf mehrere MitarbeiterInnen aufgeteilt sind, können einzelne EntwicklerInnen leichter ausgetauscht werden. Durch die ständigen Meetings, können offene Fragen geklärt werden und neuen Mitgliedern der Einstige in das Projekt erleichter werden. Dies führt auch zu einem stärkeren Teamzusammenhalt. Durch diese ständigen Meetings kommt es ebenfalls zu einer besseren Kommunikation aller Beteiligten.
-
   \item[Plan:]Da jeder/jede Entwickler/Entwicklerin eine spezielle Aufgabe hat, ist es schwer diesen/ diese während des Projektes zu ersetzen. Allerdings gibt es klar definierte Projektphasen. Nach Abschluss einer Phase wird das Personal wieder verfügbar und personelle Änderungen können leichter in die Tat umgesetzt werden. Während einer laufenden Phase herrscht ein Zeitdruck, welcher die Einschulungen neuer Mitarbeiter schwierig gestaltet.
  \end{itemize}
 \end{itemize}
@@ -89,5 +88,5 @@ beiten. Jedoch ist sich das obere Management, das die Strategie eingeführt hat,
 dass Software mit Hilfe von agilen Methoden entwickelt wird, die auf engere Teamarbeit und Pair Pro-
 gramming beruhen. Erläutern Sie die Schwierigkeiten, die diese neue Politik verursachen könnte und wie
 Sie diese Probleme umschiffen würde}
-Die größte Schwierigkeit, welche man hier Lösen muss ist die Kommunikation untereinander. Im heutigen Berufsalltag wird dies aber auch schon mehrfach Online über Teams,Zoom,... abgehalten. Dadurch mach es keinen Unterschied , ob man sich im Büro oder im Homeoffice befindet. Pairprogramming über das Internet ist sicher schwieriger, als wenn man sich am selben Ort befindet. Hierzu gibt es aber viele Tools welche das Arbeiten über das Internet erleichtern. VSCode hat zum Beispiel ein Plugin, bei welchem man zusammen ein SourceCode-File bearbeiten kann. Dies erleichtert die Arbeit über das Internet schon um einiges. Des Weiten haben machen Tools wie MS-Teams eine Funktion, welche es extrem einfach macht seinen Bildschirme zu teilen und zusammen zu arbeiten. Ein Faktor, welchen man allerdings nicht beeinflussen kann, ist die Internetverbindung des/der einzelnen MitarbeiterIn. So kann es zu Verzerrungen und Problemen bei der Verständigung kommen. Die Enge Teamarbeit kann man mit täglichen kurzen Meeting aufrecht erhalten.
+Die größte Schwierigkeit, welche man hier lösen muss ist die Kommunikation untereinander. Im heutigen Berufsalltag wird dies aber auch schon mehrfach Online über Teams,Zoom,... abgehalten. Dadurch macht es keinen Unterschied, ob man sich im Büro oder im Homeoffice befindet. Pairprogramming über das Internet ist sicher schwieriger, als wenn man sich am selben Ort befindet. Hierzu gibt es aber viele Tools welche das Arbeiten über das Internet erleichtern. VSCode hat zum Beispiel ein Plugin, bei welchem man zusammen ein SourceCode-File bearbeiten kann. Dies erleichtert die Arbeit über das Internet schon um einiges. Des Weiten haben machen Tools wie MS-Teams eine Funktion, welche es extrem einfach macht seinen Bildschirme zu teilen und zusammen zu arbeiten. Ein Faktor, welchen man allerdings nicht beeinflussen kann, ist die Internetverbindung des/der einzelnen MitarbeiterIn. So kann es zu Verzerrungen und Problemen bei der Verständigung kommen. Die enge Teamarbeit kann man mit täglichen kurzen Meeting aufrecht erhalten.
 \end{document}
