Exercise 4 Programmiertechnik solved and worked on my Portfolio

--- a/1.Semester/eCollaboration/Potrfolio.tex
+++ b/1.Semester/eCollaboration/Potrfolio.tex
@@ -174,22 +174,37 @@ Da ich in einem ca. 2000 Seelendorf lebe sind viele meiner Communities Ortsbasie
 \end{tikzpicture}
 \end{center}
 \caption{Grafik meiner persönlichen Netzwerke}
+\label{fig:communities}
 \end{figure}
 \flushleft Mein persönliches Netzwerk besteht zum Großteil aus Communities in meinem Heimatort. Da diese alle Vereine sind, werde ich diese unter einmal analysieren. Eine weitere sehr neue Community in meinem persönlichen Netzwerk ist die des DiBSE Studiums.
 \pagebreak
 \subsection{Vereine Schützen,Jungbauern und Feuerwehr}
+Da es sich hier bei allen genannten Beispielen um Vereine handelt und diese sehr ähnlich aufgebaut sind, habe ich mich dazu entschlossen diese auch unter einmal zu behandel.
 \subsubsection{Handelt es sich dabei tatsächlich um eine Community ?}
+Laut einer Definition ist eine Community ein einheitlicher Verbund von Personen basierend auf Gemeinsamen Interessen, die in einem bestimmten Gebiet leben. So ist das Gemeinsamen Interesse bei den Schützen die Pflege der Tradition, vor allem im Heimatort. Das Interesse der Feuerwehr ist es einen Ort zu schützen und den Menschen, welche diesen Bewohnen in Notlagen zu helfen. Das Interesse der Jungbauern ist es ein Gemeinschaftsgefühl in der jungen Bevölkerung eines Dorfes zu schaffen, mit welchem sorge über ältere getragen werden kann. Laut dieser Übereinstimmungen mit der obigen Definition, würde ich alle drei Vereine als Community indentifizieren.
 \subsubsection{Art der Community}
+Da diese Vereine sich alle in meinem Heimatort befinden würde ich diese als \textbf{Ortsbasierte Communities} einstufen. Da es aber auch bei allen Vereinen eine Führungsebene gibt, würde dies auf eine \textbf{Organisationsbasierte Community} hindeuten. Deshalb würde ich Vereine als eine Mischform von \textbf{Ortsbasierten Communities} und  \textbf{Organisationsbasierten Communities} beschreiben.
 \subsubsection{Grad der Virtualität}
+Da diese Vereine (vor allem Schützen und Feuerwehr) sehr stark von Übungen geprägt sind, ist der Grad der Virtualität sehr gering. Das einzige, was in dem Zusammenhang von diesen Vereine virtuell passiert ist der Informationsaustausch. Wann finden Übungen statt oder wenn andere Mitglieder des Vereines etwas erreicht haben. Ein Beispiel, wenn einen Leistungsgruppe der Feuerwehr beim Landeswettbewerb die Auszeichnung in Bronze oder Silber das erste mal schafft, dann wird dies auch als freudiges Ereignis verkündet.
+\pagebreak
 \subsection{DiBSE-Studium}
 \subsubsection{Handelt es sich dabei tatsächlich um eine Community ?}
+Eine Art eine Comunity zu definieren ist es als diese als einen Verbund von Personen basierend auf Gemeinsamen beruflichen Interessen, die über die größere Gesellschaft verstreut sind zu beschreiben. Da wir im DiBSE Studium alle aus verschiedenen Berufen und Ländern kommen, aber alle Software Engineering als Interesse teilen, kann man sagen, dass wir im DiBSE Studium eine Community sind.
 \subsubsection{Art der Community}
+Da wir das Studium vermutlich alle aus dem Grund gewählt haben, mehr über Software Engineering und Digital Business zu lernen würde ich uns in eine \textbf{Identitätsbasierte Community} einteilen.
 \subsubsection{Grad der Virtualität}
+Da wir unser Studium die meiste Zeit von Zuhause aus über BigBlueButton bestreiten und meistens über Discord und Whatsapp kommunizieren, würde ich den Grad der Virtualität als Sehr Hoch einstufen.
 \subsection{Linux,Programmieren}
+Da ich schon als Programmiere arbeite und mich privat sehr viel mit Linux beschäftige würde ich diese Communities auch in mein persönliches Netzwerk aufnehmen.
 \subsubsection{Handelt es sich dabei tatsächlich um eine Community ?}
+Wie schon beim DiBSE Studium erwähnt, kann man ein Community als einen Verbund von Personen basierend auf Gemeinsamen beruflichen Interessen, die über die größere Gesellschaft verstreut sind definieren. Da ich mich als Programmiere und `Linux-Nerd` indentifiziere und es auch andere Personen gibt, welche dies tun. Gibt es auch Foren, in welchen man sich über Probleme oder Neuerungen austauschen kann. Deswegen würde ich die Programmierer- und Linuxcommunity als eine tatsächliche Community einstufen.
 \subsubsection{Art der Community}
+Ich würde dies als \textbf{Identitätsbasierte Community} einstufen, da sich Menschen als Programmiere oder Linux-Anwender deswegen indentifizieren, da sie die selben Charakteristika aufweisen, wie andere Programmierer oder Linux-Anwender. Dies kann zum Beispiel die Begeisterung für die Technik generell sein.
 \subsubsection{Grad der Virtualität}
+Da man sich hier meistens über Foren austauscht und sich tatsächlich nie physisch kennenlernt. Würde ich den Grad der Virtualität als Sehr Hoch einstufen.
 \subsection{Überschneidungen zwischen den Communities}
+Wie man schon aus der Abbildung \ref{fig:communities} entnehmen kann gibt es Überschneidungen zwischen den Communities \textbf{Feuerwehr,Schützen und Jungbauern}. Die Überschneidungen hierbei ist nicht nur, dass diese sich im selben Ort befinden. Sondern auch, dass die Personen, mit welchem ich mich in diesen Communities treffe meistens in allen der drei Vereine vertreten sind. So ist die Freundesgruppe, mit welcher ich mich Mietens treffe sowohl mitglied bei der Feuerwehr als auch bei den Jungbauern und Schützen.\\
+Die Communities \textbf{DiBSE,Programmieren und Linux} Überschneidungen sich in der Thematik, welche in den Communities behandelt werden. So wird im DiBSE Studium über Programmierung und Linux gesprochen. Weiteres kann ich aus dem DiBSE-Studium Wissen für die anderen Communities nutzen.
 \pagebreak
 \listoffigures
 \lstlistoflistings
