--- a/1.Semester/LogikUndBerechenbarkeit/Aufgabe1.tex
+++ b/1.Semester/LogikUndBerechenbarkeit/Aufgabe1.tex
@@ -287,44 +287,44 @@ Wenn $x \Rightarrow y$ Wahr ist und $x$ Wahr ist. Dann ist auch $y$ Wahr.
 (\exists x f(x,3) +y > g(3,z) *42)
 \end{align*}
 \begin{tikzpicture}
-\filldraw[black] (0,0) circle (0pt) node[anchor=center]{$>$};
-\filldraw[black] (3,0) circle (0pt) node[anchor=center]{$..............................atomare Aussage$};
+\filldraw[black] (0,0) circle (0pt) node[anchor=center]{$E$};
+\filldraw[black] (3,0) circle (0pt) node[anchor=center]{$..............................Existenzaussage$};
 \draw[gray, thick] (0,-0.2) -- (2,-1);
 \draw[gray, thick] (0,-0.2) -- (-2,-1);
-\filldraw[black] (2,-1.2) circle (0pt) node[anchor=center]{$*$};
-\filldraw[black] (-2,-1.2) circle (0pt) node[anchor=center]{$+$};
-\filldraw[black] (0,-1.3) circle (0pt) node[anchor=center]{$.....................................$};
-\filldraw[black] (4,-1.2) circle (0pt) node[anchor=center]{$............................ Terme$};
-\draw[gray, thick] (-2,-1.4) -- (-4,-2.2);
-\draw[gray, thick] (-2,-1.4) -- (0,-2.2);
-\filldraw[black] (-4,-2.6) circle (0pt) node[anchor=center]{$\exists$};
-\filldraw[black] (-6,-2.6) circle (0pt) node[anchor=center]{$Funktion .......................$};
-\filldraw[black] (0,-2.6) circle (0pt) node[anchor=center]{$y$};
-\filldraw[black] (-1.5,-2.6) circle (0pt) node[anchor=center]{$Variable..............$};
+\filldraw[black] (2,-1.2) circle (0pt) node[anchor=center]{$>$};
+\filldraw[black] (-2,-1.2) circle (0pt) node[anchor=center]{$x$};
+\filldraw[black] (2,-2.7) circle (0pt) node[anchor=center]{$.....................................$};
+\filldraw[black] (4,-1.2) circle (0pt) node[anchor=center]{$...........atomare Aussage$};
+\filldraw[black] (-3,-1.2) circle (0pt) node[anchor=center]{$Variable ...$};
 \draw[gray, thick] (2,-1.4) -- (4,-2.2);
-\draw[gray, thick] (2,-1.4) -- (1,-2.2);
-\filldraw[black] (4,-2.6) circle (0pt) node[anchor=center]{$g$};
-\filldraw[black] (5,-2.6) circle (0pt) node[anchor=center]{$...Funktion$};
-\filldraw[black] (1,-2.6) circle (0pt) node[anchor=center]{$42$};
-\filldraw[black] (2.2,-2.6) circle (0pt) node[anchor=center]{$...Konstante$};
+\draw[gray, thick] (2,-1.4) -- (0,-2.2);
+\filldraw[black] (4,-2.6) circle (0pt) node[anchor=center]{$*$};
+\filldraw[black] (5.2,-2.6) circle (0pt) node[anchor=center]{$...Funktionen$};
+\filldraw[black] (0,-2.6) circle (0pt) node[anchor=center]{$+$};
+\filldraw[black] (3,-4.2) circle (0pt) node[anchor=center]{$Konstante$};
 \draw[gray, thick] (4,-2.8) -- (3,-3.6);
 \draw[gray, thick] (4,-2.8) -- (5,-3.6);
-\filldraw[black] (3,-3.8) circle (0pt) node[anchor=center]{$3$};
-\filldraw[black] (1.5,-3.8) circle (0pt) node[anchor=center]{$Konstante.........$};
-\filldraw[black] (5,-3.8) circle (0pt) node[anchor=center]{$z$};
-\filldraw[black] (6,-3.8) circle (0pt) node[anchor=center]{$...Variable$};
-\draw[gray, thick] (-4,-2.8) -- (-3,-3.6);
-\draw[gray, thick] (-4,-2.8) -- (-5,-3.6);
-\filldraw[black] (-3,-3.8) circle (0pt) node[anchor=center]{$x$};
-\filldraw[black] (-2,-3.8) circle (0pt) node[anchor=center]{$...Varaiabel$};
-\filldraw[black] (-5,-3.8) circle (0pt) node[anchor=center]{$f$};
-\filldraw[black] (-6.1,-3.8) circle (0pt) node[anchor=center]{$Funktion...$};
-\draw[gray, thick] (-5,-4) -- (-4,-4.8);
-\draw[gray, thick] (-5,-4) -- (-6,-4.8);
-\filldraw[black] (-4,-5) circle (0pt) node[anchor=center]{$x$};
-\filldraw[black] (-3,-5) circle (0pt) node[anchor=center]{$...Variable$};
-\filldraw[black] (-6,-5) circle (0pt) node[anchor=center]{$3$};
-\filldraw[black] (-7.2,-5) circle (0pt) node[anchor=center]{$Konstante...$};
+\filldraw[black] (3,-3.8) circle (0pt) node[anchor=center]{$42$};
+\filldraw[black] (-2.2,-3.8) circle (0pt) node[anchor=center]{$Term.............$};
+\filldraw[black] (5,-3.8) circle (0pt) node[anchor=center]{$g$};
+\filldraw[black] (6,-3.8) circle (0pt) node[anchor=center]{$........Term$};
+\filldraw[black] (1,-4.2) circle (0pt) node[anchor=center]{$Variable$};
+\draw[gray, thick] (0,-2.8) -- (-1,-3.6);
+\draw[gray, thick] (0,-2.8) -- (1,-3.6);
+\filldraw[black] (1,-3.8) circle (0pt) node[anchor=center]{$y$};
+\filldraw[black] (-1,-3.8) circle (0pt) node[anchor=center]{$f$};
+\draw[gray, thick] (-1,-4) -- (-2,-4.8);
+\draw[gray, thick] (-1,-4) -- (0,-4.8);
+\filldraw[black] (-2,-5) circle (0pt) node[anchor=center]{$x$};
+\filldraw[black] (0,-5) circle (0pt) node[anchor=center]{$3$};
+\draw[gray, thick] (5,-4) -- (4,-4.8);
+\draw[gray, thick] (5,-4) -- (6,-4.8);
+\filldraw[black] (4,-5) circle (0pt) node[anchor=center]{$3$};
+\filldraw[black] (6,-5) circle (0pt) node[anchor=center]{$z$};
+\filldraw[black] (7,-5) circle (0pt) node[anchor=center]{$...Variable$};
+\filldraw[black] (4,-5.5) circle (0pt) node[anchor=center]{$Konstante$};
+\filldraw[black] (0,-5.5) circle (0pt) node[anchor=center]{$Konstante$};
+\filldraw[black] (-3,-5) circle (0pt) node[anchor=center]{$Variable...$};
 \end{tikzpicture}
 \end{center}
 \section{6.a)}
